fixed scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,18 +59,7 @@ button {
 }
 
 
-<<<<<<< HEAD
-.events {
-    float: left
-}
-
-
-
-
-/* maps */
-=======
 /* EVENT SECTION */
->>>>>>> e22f05d3608879015112abd8d6497a672310efad
 
 .event-style {
     /* float: left; */
